--- a/app/styles/ui/button.module.scss
+++ b/app/styles/ui/button.module.scss
@@ -71,4 +71,50 @@
     font-weight: 500;
     text-transform: uppercase;
   }
+
+  &.--tab {
+    width: 100%;
+    padding: 1.2rem 0.8rem;
+    font-size: 1.8rem;
+    line-height: 1.3;
+    border: 0.1rem solid transparent;
+    border-radius: 0.8rem;
+    outline: 0;
+
+    &:hover,
+    &:focus-visible,
+    &:active {
+      & + .--tab-inactive,
+      & ~ .--tab-inactive {
+        color: var(--c-tab-inactive-text);
+      }
+    }
+
+    &:hover {
+      background-color: var(--c-tab-hover-active-background);
+      border-color: var(--c-tab-hover-active-stroke);
+      color: var(--c-tab-hover-active-text);
+    }
+
+    &:focus-visible {
+      background-color: var(--c-tab-focus-active-background);
+      border-color: var(--c-tab-focus-active-stroke);
+      color: var(--c-tab-focus-active-text);
+    }
+
+    &:active {
+      background-color: var(--c-tab-pressed-active-background);
+      border-color: var(--c-tab-pressed-active-stroke);
+      color: var(--c-tab-pressed-active-text);
+    }
+  }
+  &.--tab-active {
+    background-color: var(--c-background-color);
+    border-color: var(--c-tab-default-active-stroke);
+    color: var(--c-tab-default-active-text);
+  }
+
+  &.--tab-inactive {
+    color: var(--c-tab-default-inactive-text);
+  }
 }
