--- a/app/styles/base/globals.scss
+++ b/app/styles/base/globals.scss
@@ -21,6 +21,7 @@
   --c-stroke-hero: #d6d8e5;
   --c-blur-background: rgba(255, 255, 255, 0.9);
   --c-box-shadow: #e6e6ed;
+  --c-outline-default: #eaecf4;
 
   //Card
   --c-card-background: var(--c-neutral);
