--- a/app/styles/hero.module.scss
+++ b/app/styles/hero.module.scss
@@ -145,20 +145,34 @@
 
   @include desktopSmall {
     width: auto;
+    flex: 1;
     margin-inline: initial;
   }
+  @include desktop {
+    flex: initial;
+  }
   &__image-container {
+    display: flex;
     position: relative;
     width: 100%;
     height: 100%;
     max-height: 75rem;
+
+    @include desktop {
+      display: block;
+    }
   }
   &__image {
     object-fit: cover;
     padding-left: 1.9rem;
 
     @include desktopSmall {
+      flex: 1;
       padding-left: 0;
+    }
+
+    @include desktop {
+      flex: initial;
     }
   }
 }
