Styles update (new modifier)

--- a/app/styles/ui/logo.module.scss
+++ b/app/styles/ui/logo.module.scss
@@ -7,4 +7,9 @@
   gap: 0.4rem;
   line-height: 1.4;
   color: var(--c-logo-text);
+
+  &.--header {
+    position: relative;
+    z-index: 5;
+  }
 }
