--- a/app/styles/base/globals.scss
+++ b/app/styles/base/globals.scss
@@ -121,6 +121,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   min-height: 100vh;
   padding-block: 3.2rem;
@@ -128,6 +130,11 @@ body {
   font-weight: 600;
   line-height: 1.6;
   letter-spacing: -0.05em;
+}
+
+main {
+  position: relative;
+  flex: 1;
 }
 
 .wrapper {
